force-app/main/default/objects/LLC_BI__Fee__c/LLC_BI__Fee__c.object-meta.xml
<CustomObject>
    <description>The Fee Object is used to track details of the fees associated to a Loan (Product)</description>
    <label>Fee</label>
    <nameField>
        <displayFormat>FEE-{000000}</displayFormat>
        <label>Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>