force-app/main/default/objects/LLC_BI__Fee__c/fields/JHJX__Core_External_Id__c.field-meta.xml
<CustomField>
    <fullName>JHJX__Core_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Core Booking External Id</label>
    <length>125</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>