force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Add_To_Finance_Charge__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Add_To_Finance_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user selects this checkbox field to indicate that a fee is a Reg Z finance charge that the system uses to calculate the APR. By default, this field is deselected.</description>
    <label>Add To Finance Charge</label>
    <type>Checkbox</type>
</CustomField>