force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Add_To_MAPR__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Add_To_MAPR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field when a fee is included in the MAPR calculation. Fees added to the finance charge are always considered MAPR fees. By default, the value is false.</description>
    <inlineHelpText>Select this field when a fee is included in the MAPR calculation.</inlineHelpText>
    <label>Add To MAPR</label>
    <type>Checkbox</type>
</CustomField>