force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Add_To_Principle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Add_To_Principle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED-- Deprecated field, no longer in use, replaced by Add_To_Principal__c</description>
    <label>Add To Principle - D</label>
    <type>Checkbox</type>
</CustomField>