force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Amount_Changed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Changed__c</fullName>
    <description>The system autopopulates this formula field to indicate a fee&apos;s amount changed from its original amount relative to the corresponding loan fee. By default, it is blank.</description>
    <formula>IF(AND(ISPICKVAL(LLC_BI__Status__c ,&apos;Inactive&apos;), NOT ISBLANK(LLC_BI__Pricing_Option__c)), IF(ISBLANK(LLC_BI__Fee__c), LLC_BI__Amount__c, IF(LLC_BI__Amount__c=LLC_BI__Fee__r.LLC_BI__Amount__c, NULL, LLC_BI__Amount__c - LLC_BI__Fee__r.LLC_BI__Amount__c)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this field to see the change of amount after you edit a fee from its original amount.</inlineHelpText>
    <label>Amount Changed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>