force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Collected__c</fullName>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>