force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Paid__c</fullName>
    <description>This field is manually entered and allows the user to specify the amount that has been paid on the fee.</description>
    <inlineHelpText>The amount paid on the fee.</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>