force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Basis_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Basis_Source__c</fullName>
    <description>Users populate this optional picklist with the basis for percentage fees, such as loan amount, another loan field or scenario amount. This field is used when Calculation Type is equal to percent. By default, it is blank.</description>
    <inlineHelpText>Select the basis for percentage fees, such as loan amount, total interest, or another loan field.</inlineHelpText>
    <label>Basis Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LLC_BI__Amount__c</fullName>
                <label>Loan Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>