force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Id__c</fullName>
    <description>Users or the system populate this text field to capture the identity of the related record associated to the fee.</description>
    <inlineHelpText>This field indicates any associated records related to the fee.</inlineHelpText>
    <label>Context Identity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>