force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Disable_Auto_Updates__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Disable_Auto_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users populate this optional checkbox field for manually edited fee records. The system uses this to determine if the fee record can be updated automatically. By default, it is deselected.</description>
    <inlineHelpText>Select this if the fee record should be locked and not updated automatically based on criteria changes.</inlineHelpText>
    <label>Disable Auto Updates</label>
    <type>Checkbox</type>
</CustomField>