force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Code__c</fullName>
    <description>This field is configured to display all internal codes that the financial institution may have for fees. This field is a picklist and is used to specify the code associated to the Fee being applied. This can be preset for standard fees using fee management templates or added as a user is applying non standard fees.</description>
    <label>Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>