force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Payable_To_State__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Payable_To_State__c</fullName>
    <description>This is a formula field that is auto-populated with the state associated to the &quot;payable to&quot; relationship.</description>
    <formula>LLC_BI__Fee_Payable_To__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Payable To State</label>
    <type>Text</type>
</CustomField>