force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Payable_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Payable_To_Zip_Code__c</fullName>
    <description>This is a formula field that is auto-populated with the postal code associated to the &quot;payable to&quot; relationship.</description>
    <formula>LLC_BI__Fee_Payable_To__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Payable To Zip Code</label>
    <type>Text</type>
</CustomField>