force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Fee_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Type_Description__c</fullName>
    <description>This field only appears when the fee type of &quot;other&quot; is selected. It is a free form text box that allows the user to enter in a description for the fee being applied to the loan.</description>
    <inlineHelpText>When the fee type is other this field is a describes the fee type.</inlineHelpText>
    <label>Fee Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>