force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Is_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user populates this field to indicate if the fee is an income fee. If the fee has a template, the system autopopulates the field. By default, it is not selected.</description>
    <inlineHelpText>Select this field if the fee is an income fee.</inlineHelpText>
    <label>Is Income</label>
    <type>Checkbox</type>
</CustomField>