force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Loan_Collateral2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Collateral2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is not required and specifies the pledged collateral record resulting in the fee.</description>
    <inlineHelpText>Lookup to the related pledged collateral record to which this fee is being applied.</inlineHelpText>
    <label>Pledged Collateral</label>
    <referenceTo>LLC_BI__Loan_Collateral2__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>