force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Monthly_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Monthly_Payment_Amount__c</fullName>
    <description>The system automatically populates this currency field to indicate the amount the borrower pays monthly for the fee. By default, this field is blank.</description>
    <formula>LLC_BI__Annual_Payment_Amount__c  / 12</formula>
    <inlineHelpText>This system-populated field indicates the monthly payment amount for the fee.</inlineHelpText>
    <label>Monthly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>