force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Number_Of_Escrow_Months__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_Of_Escrow_Months__c</fullName>
    <description>The system automatically populates this number field to indicate the total number of months, including the cushion, the borrower pays at closing for their escrow account. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the total number of months, including the cushion, the borrower pays at closing for their escrow account.</inlineHelpText>
    <label>Number of Escrow Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>