force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Number_Of_Prepaid_Months__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_Of_Prepaid_Months__c</fullName>
    <description>Users populate this optional number field to indicate the number of months the borrower prepays for the fee at closing. By default, this field is blank.</description>
    <inlineHelpText>Enter the number of months the borrower prepays for the fee at closing.</inlineHelpText>
    <label>Number of Prepaid Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>