force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Payout_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payout_Frequency__c</fullName>
    <description>Users populate this optional picklist field to indicate the desired payout frequency for the escrow account. By default, this field is blank.</description>
    <inlineHelpText>Select the desired payout frequency for the escrow account.</inlineHelpText>
    <label>Payout Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>