force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Per_Diem__c</fullName>
    <description>The system automatically populates this currency field to indicate the daily amount of prepaid interest due at closing. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the daily amount of prepaid interest due at closing.</inlineHelpText>
    <label>Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>