force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Record_Type__c</fullName>
    <description>Users populate this optional picklist with the record type of the fee, cost, or adjustment. By default, it is blank.</description>
    <inlineHelpText>Select the record type of the fee, cost, or adjustment.</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Costs</fullName>
            </value>
            <value>
                <fullName>Adjustments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>