force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Service_Shopped_For__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Service_Shopped_For__c</fullName>
    <description>Users populate this optional picklist to indicate whether or not the borrower shopped for the service. This field only applies to services the borrower can shop for. By default, this field is blank.</description>
    <inlineHelpText>Select Did Shop For if the borrower shopped for the service. Select Did Not Shop For if the borrower did not shop for the service.</inlineHelpText>
    <label>Service Shopped For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Did Not Shop For</fullName>
            </value>
            <value>
                <fullName>Did Shop For</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>