force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Shopped_For__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Shopped_For__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--DEPRECATED-- Replaced by Service_Shopped_For__c.
        The user marks this optional boolean field to true when borrowers shop for a service for fees, costs, and adjustments rather than using the financial-institution-recommended service. By default, it is blank.</description>
    <inlineHelpText>This user-populated field displays when the customer shops for a service for fees, costs, and adjustments.</inlineHelpText>
    <label>-D Shopped For</label>
    <type>Checkbox</type>
</CustomField>