force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Trade_In_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trade_In_Balance__c</fullName>
    <description>The system automatically populates this currency field to indicate the amount owed on the collateral the applicant wants to trade in for their purchase. By default, this field is blank.</description>
    <inlineHelpText>This field displays the amount owed on the applicant&apos;s trade-in collateral.</inlineHelpText>
    <label>Trade-In Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>