force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__Trade_In_Lien_Holder__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trade_In_Lien_Holder__c</fullName>
    <description>The system automatically populates this text field to indicate the name of the financial institution that has an existing lien on an applicant&apos;s trade-in vehicle. By default, this field is blank.</description>
    <inlineHelpText>This field displays the name of the financial institution that has an existing lien on the applicant&apos;s trade-in vehicle.</inlineHelpText>
    <label>Trade-In Lien Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>