force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__TRID_Disclosure_Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TRID_Disclosure_Category__c</fullName>
    <description>Users manually populate this optional picklist to indicate the TRID disclosure category for a fee. By default, the picklist value is null.</description>
    <inlineHelpText>Select the TRID disclosure category for the fee.</inlineHelpText>
    <label>TRID Disclosure Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Origination Charges</fullName>
            </value>
            <value>
                <fullName>Services You Cannot Shop For</fullName>
            </value>
            <value>
                <fullName>Services You Can Shop For</fullName>
            </value>
            <value>
                <fullName>Taxes and Other Government Fees</fullName>
            </value>
            <value>
                <fullName>Prepaids</fullName>
            </value>
            <value>
                <fullName>Initial Escrow Payment at Closing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>