force-app/main/default/objects/LLC_BI__Fee__c/fields/Payee_City__c.field-meta.xml
<CustomField>
    <fullName>Payee_City__c</fullName>
    <label>Payee City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>