force-app/main/default/objects/LLC_BI__Fee__c/fields/Payee_State__c.field-meta.xml
<CustomField>
    <fullName>Payee_State__c</fullName>
    <label>Payee State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>